<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layoutMiscellaneous"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/purple_200"
    android:orientation="vertical"
    app:behavior_peekHeight="@dimen/_40sdp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <TextView
        android:id="@+id/textMiscellaneous"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_40sdp"
        android:gravity="center"
        android:includeFontPadding="false"
        android:text="@string/layout_miscellaneous_text_miscellaneous_text"
        android:textColor="@color/colorWhiteTextColor"
        android:textSize="@dimen/_13ssp" />



    <LinearLayout
        android:id="@+id/layoutAddImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_image"
            app:tint="@color/colorIcons" />

        <TextView
            android:id="@+id/textAddImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:text="@string/layout_miscellaneous_text_add_image_text"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/layoutCaptureImage"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_margin="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_baseline_camera_alt_24"
            app:tint="@color/colorIcons" />

        <TextView
            android:id="@+id/textCaptureImage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:text="@string/layout_miscellaneous_text_capture_image_text"
            android:textColor="@color/colorIcons"
            android:textSize="@dimen/_12ssp" />
    </LinearLayout>



    <LinearLayout
        android:id="@+id/layoutDeleteNote"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_35sdp"
        android:layout_marginStart="@dimen/_10sdp"
        android:layout_marginEnd="@dimen/_10sdp"
        android:layout_marginBottom="@dimen/_10sdp"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        android:visibility="gone"
        tools:ignore="UseCompoundDrawables">

        <ImageView
            android:layout_width="@dimen/_22sdp"
            android:layout_height="@dimen/_22sdp"
            android:contentDescription="@string/app_name"
            android:src="@drawable/ic_delete"
            app:tint="@color/colorDelete" />

        <TextView
            android:id="@+id/textDeleteNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_10sdp"
            android:includeFontPadding="false"
            android:text="@string/layout_miscellaneous_text_delete_note_text"
            android:textColor="@color/colorDelete"
            android:textSize="@dimen/_12ssp" />

    </LinearLayout>

</LinearLayout>